--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Coming Soon...
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GA</title>
+  </head>
+  <body>
+    <img src="/asset/masu.jpg" alt="" width="400px" />
+    <h1>Masu Khane Vai Aau</h1>
+  </body>
+</html>
